--- a/leo/index.html
+++ b/leo/index.html
@@ -22,13 +22,23 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.3199598501665!2d127.75563961525553!3d26.316136991851298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5133d5f630eeb%3A0xdcd47737aa1ef208!2zTmV4U2VlZCDmspbnuITmoKE!5e0!3m2!1sja!2sjp!4v1606851123469!5m2!1sja!2sjp"
                         width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
-                <div class="step2">
-                    <p>ステップ 2. 　ヒアリングと学びたい分野の決定</p>
-
-                    <div class="hearing">
-                        <img src="../leo/img/meeting.jpg">
+                <div class="halfbox">
+                    <div class="step2">
+                        <p>ステップ 2. 　ヒアリングと学びたい分野の決定</p>
+                        <div class="hearing">
+                            <img src="../leo/img/meeting.jpg">
+                            <h5>お客様が身に付けたいカテゴリーをお聞きし、それを元にお客様オリジナルのカリキュラムを作成いたします。日常会話、ビジネス、検定、...etc
+                            </h5>
+                        </div>
                     </div>
-
+                    <div class="step3">
+                        <p>ステップ 3. 　ZOOMで楽しく英語を身につける</p>
+                        <div class="hearing">
+                            <img src="../leo/img/ZOOMlesson.jpg">
+                            <h5>お客様が身に付けたいカテゴリーをお聞きし、それを元にお客様オリジナルのカリキュラムを作成いたします。日常会話、ビジネス、検定、...etc
+                            </h5>
+                        </div>
+                    </div>
                 </div>
 
             </div>
