後ハンバーガーメニューです！

--- a/ayane/index.html
+++ b/ayane/index.html
@@ -12,10 +12,10 @@
 <body>
         <header class="fixed">
           <section class="headerall"> 
-            <div>
+             <div>
                 <img class="icon" src="img/pen.png" alt="img0">
-            </div>
-            <div>
+             </div>
+             <div>
                  <ul class="menu"> 
                   <li><span class="menucontent"><a href="#" >ABOUT</a></span></li> 
                   <li><span class="menucontent"><a href="#" >SITUATION</a></span></li> 
@@ -25,15 +25,17 @@
                   <li><span class="menucontent"><a href="#map" >ACCESS</a></span></li> 
                  </ul> 
             </div> 
-            <div id="toggle" class="js-hamburger hamburger">
-              <span></span>
-            </div>
-            <!-- ドロワー -->
-            <div id="drower-bg"></div>
-            <ul class="drower js-drower">
-              <li class="js-register">新規登録</li>
-              <li class="js-login">ログイン</li>    
-          </section> 
+          </section>  
+            <!-- ハンバーガーメニュー -->
+          <div id="toggle" class="js-hamburger hamburger">
+            <span></span>
+          </div>
+          <!-- ドロワー -->
+          <div id="drower-bg"></div>
+          <ul class="drower js-drower">
+            <li class="js-register">新規登録</li>
+            <li class="js-login">ログイン</li>
+          </ul>
         </header> 
          <!-- <head_slide>   -->
         <div class="container-fluid">
