ハンバーガー

--- a/ayane/index.html
+++ b/ayane/index.html
@@ -26,17 +26,19 @@
                  </ul> 
             </div> 
           </section>  
-            <!-- ハンバーガーメニュー -->
-          <div id="toggle" class="js-hamburger hamburger">
-            <span></span>
-          </div>
-          <!-- ドロワー -->
-          <div id="drower-bg"></div>
-          <ul class="drower js-drower">
-            <li class="js-register">新規登録</li>
-            <li class="js-login">ログイン</li>
-          </ul>
         </header> 
+        <div class="hamburgerall">
+            <!-- ハンバーガーメニュー -->
+            <div id="toggle" class="js-hamburger hamburger">
+              <span></span>
+            </div>
+            <!-- ドロワー -->
+            <div id="drower-bg"></div>
+            <ul class="drower js-drower">
+              <li class="js-register">新規登録</li>
+              <li class="js-login">ログイン</li>
+            </ul>     
+          </div>   
          <!-- <head_slide>   -->
         <div class="container-fluid">
                 <div id="slideshow">
